Started work on Linked Lists

--- a/Tic Tac Toe Final/styles.css
+++ b/Tic Tac Toe Final/styles.css
@@ -22,7 +22,7 @@ header{
     width: 560px;
     height: 560px;
     margin: 0 auto;
-    background-color: rgb(255, 0, 0);
+    background-color: red;
     color: white;
     border: none;
     border-radius: none;
