--- a/ticTacToe/styles.css
+++ b/ticTacToe/styles.css
@@ -14,7 +14,7 @@ header{
     text-align: center;
     align-content: center;
     padding-top: 1%;
-    padding-bottom: 1%;
+    padding-bottom: 25px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .outerGrid
